# noatpp-sse

./: .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  PROJECT_DESIGN.md  README.md  build-static.sh  build.bat  build.sh  clean.bat  clean.sh  run.bat  run.sh  setup_dependencies.bat  setup_dependencies.sh
documents/: BUILD_INSTRUCTIONS.md  PHASE1_ARCHITECTURE.md  PROJECT_DESIGN.md
src/: main.cpp
src/domain/models/: HealthStatus.hpp
src/infrastructure/json/: JsonHelper.hpp  Jsonable.hpp
src/infrastructure/oatpp/: OatppServerWrapper.cpp  OatppServerWrapper.hpp
src/presentation/controllers/: HttpController.cpp  HttpController.hpp
static/: test.html
